@@ -2,9 +2,11 @@ package Gateway;
 
 import Events.EventManager;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 
 public class EventGateway extends Gateway{
@@ -14,7 +16,7 @@ public class EventGateway extends Gateway{
     }
 
     public void readEventsFromGateway(EventManager eventManager) throws IOException {
-        if (Files.notExists(Path.of(getFilePath()))) return;
+        if (!Files.exists(Paths.get(getFilePath()))) return;
         this.readFromFile();
         for (int i=0; i<this.getRowCount(); i++){
             String[] eventData = this.getRow(i);
